--- a/estilo/style.css
+++ b/estilo/style.css
@@ -15,14 +15,52 @@
     margin: 0%;
 }
 
+
+
 header {
+    color: white;
     background-color:#1c0daf;
+    text-align: center;
+    padding: 30px;
+}
+
+header > h1{
+    font-variant: small-caps;
+}
+
+nav {
+    background-color: #00007a;
+    text-align: right;
+    padding: 10px;
+}
+
+nav a{
+    color:white;
+    padding-left: 10px;
+    text-decoration: none;
 }
 
 body {
     background-color:white;
+    
+}
+
+
+body > p {
+    padding-left: 50px;
+    width: 800px;
+    text-align: justify;
 }
 
 footer {
     background-color: #00007a;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+
+footer a{
+    color: white;
+    text-decoration: none;
+
 }
