--- a/estilo/style.css
+++ b/estilo/style.css
@@ -30,24 +30,41 @@ header > h1{
 
 nav {
     background-color: #00007a;
-    text-align: right;
+    text-align: center;
     padding: 10px;
+    margin-bottom: 30px
 }
 
 nav a{
     color:white;
     padding-left: 10px;
     text-decoration: none;
+    }
+
+a:hover {
+    background-color: #371be4;
+    padding: 10px;
+    border-top-left-radius: 20px;
 }
 
 body {
     background-color:white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
     
 }
 
 
 body > p {
-    padding-left: 50px;
+   
+    padding-left: 30px;
+    width: 800px;
+    text-align: justify;
+    line-height: 1.5em;
+}
+
+body > ul {
+    padding-left: 30px;
     width: 800px;
     text-align: justify;
 }
